--- a/app/ui/cells.css
+++ b/app/ui/cells.css
@@ -1,5 +1,18 @@
 .current_day_cell
 {
-	border-right: 3px solid #4a86e8;
-	border-left: 3px solid #4a86e8;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	bottom: 0px;
+	right: 0px;
+    border-top: 1px solid #d0d0d0;
+}
+.not_current_day_cell
+{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	bottom: 0px;
+	right: 0px;
+    border-top: 1px solid #dddddd;
 }
