--- a/app/ui/navbar.module.css
+++ b/app/ui/navbar.module.css
@@ -44,3 +44,17 @@
   padding-bottom: var(--mantine-spacing-xl);
   border-top: rem(1px) solid light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
 }
+
+.element {
+  padding: 25px;
+  margin-right: -15px;
+  border-radius: 0;
+}
+
+.element:hover{
+  background-color: #630000;
+}
+
+.logout:hover{
+  background-color: #630000;
+}
